# creator-lift

./: .gitignore
backend/: .gitignore  Pipfile  pyproject.toml
backend/creatorProject/: manage.py
backend/creatorProject/creatorProject/: asgi.py  settings.py  urls.py  wsgi.py
backend/creatorProject/creatorapp/: admin.py  inspect.py  managers.py  models.py  serializer.py  urls.py  utils.py
backend/creatorProject/creatorapp/authentication/: authentication.py
backend/creatorProject/creatorapp/migrations/: 0001_initial.py  0002_contactus_offertags_speciality_and_more.py  0002_remove_customusersdata_username.py  0003_customusersdata_role_customusersdata_username.py  0003_remove_customusersdata_is_active.py  0004_offers_image_url.py  0005_offers_content_type.py
backend/creatorProject/creatorapp/views/: auth_views.py  createor_views.py  user_views.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  context.jsx  main.jsx
frontend/src/components/: ChooseRole.jsx  Dashboard.jsx  Deals.jsx  Footer.jsx  HeroSection.jsx  Home.jsx  Login.jsx  Navbar.jsx  Offers.jsx  Sidebar.jsx  Signin.jsx  join.jsx
frontend/src/components/animations/: Curtain.jsx  Scroll.jsx
frontend/src/components/layout/: HomeNavbar.jsx  Navbar.jsx  Sidebar.jsx
frontend/src/components/ui/: Integrations.jsx  Payments.jsx  Profile.jsx  Security.jsx  Skeleton.jsx
frontend/src/context/: context.jsx
frontend/src/services/: CreatorDashboard.js  CreatorDeals.js  CreatorOffers.js
frontend/src/utilities/: getDate.js  useCursor.js
(+9 files in other folders)
